@@ -5,7 +5,6 @@ import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 import javax.measure.Unit;
@@ -20,7 +19,9 @@ import org.testng.Assert;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 import tec.uom.se.unit.MetricPrefix;
-import tec.uom.se.unit.Units;
+
+import static tec.uom.se.unit.Units.METRE;
+import static tec.uom.se.unit.Units.OHM;
 
 public class AperStage5Current1VariableTest {
   @DataProvider(name = "variables")
@@ -35,7 +36,7 @@ public class AperStage5Current1VariableTest {
             5, 0, 0, 0,
             (byte) 0xd0, 0x07, 0, 0},
 
-            new int[] {55442, 330990, 1293}},
+            new int[] {55442, 330990, 2438, 9705, 1293}},
     };
   }
 
@@ -67,18 +68,18 @@ public class AperStage5Current1VariableTest {
   @Test
   public void testGetInputVariables() {
     int[] actual = EnumSet.allOf(AperStage5Current1Variable.class).stream().mapToInt(value -> value.getInputVariables().size()).toArray();
-    int[] expected = {1, 1, 1};
+    int[] expected = {1, 1, 1, 1, 1};
     Assert.assertEquals(actual, expected, Arrays.toString(actual));
   }
 
   @Test
   public void testGetUnit() {
-    List<? extends Unit<?>> actual = EnumSet.allOf(AperStage5Current1Variable.class).stream()
-        .map(DependentVariable::getUnit).collect(Collectors.toList());
+    List<? extends Unit<?>> actual = EnumSet.allOf(AperStage5Current1Variable.class).stream().map(DependentVariable::getUnit).toList();
     Assert.assertEquals(actual,
         Arrays.asList(
-            MetricPrefix.MILLI(Units.OHM), MetricPrefix.MILLI(Units.OHM),
-            Units.OHM
+            MetricPrefix.MILLI(OHM), MetricPrefix.MILLI(OHM),
+            MetricPrefix.MILLI(OHM).multiply(METRE), MetricPrefix.MILLI(OHM).multiply(METRE),
+            OHM
         ),
         actual.toString()
     );
@@ -86,11 +87,11 @@ public class AperStage5Current1VariableTest {
 
   @Test
   public void testOptions() {
-    List<Variable.Option> actual = EnumSet.allOf(AperStage5Current1Variable.class).stream()
-        .flatMap(v -> v.options().stream()).collect(Collectors.toList());
+    List<Variable.Option> actual = EnumSet.allOf(AperStage5Current1Variable.class).stream().flatMap(v -> v.options().stream()).toList();
     Assert.assertEquals(actual,
         Arrays.asList(
             Variable.Option.VISIBLE, Variable.Option.VISIBLE,
+            Variable.Option.TEXT_VALUE_BANNER, Variable.Option.TEXT_VALUE_BANNER,
             Variable.Option.TEXT_VALUE_BANNER
         ),
         actual.toString()
